# api/docs/swagger.yaml
@@ -119,7 +119,7 @@ info:
   title: Pima
   version: "1.0"
 paths:
-  /bids/delete:
+  /client/bids/delete:
     delete:
       consumes:
       - application/json
@@ -275,6 +275,157 @@ paths:
       summary: Update Tender
       tags:
       - Tender
+  /client/tenders/{id}/award/{bid_id}:
+    put:
+      consumes:
+      - application/json
+      description: Update an Bid's details
+      parameters:
+      - description: Bid ID
+        in: query
+        name: bid_id
+        type: string
+      - description: Bid Update Details
+        in: body
+        name: bid
+        required: true
+        schema:
+          $ref: '#/definitions/models.ApiUpdateBidReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Update an Bid
+      tags:
+      - bid
+  /client/tenders/{id}/bid:
+    get:
+      consumes:
+      - application/json
+      description: Get all Bids with optional filtering
+      parameters:
+      - description: TenderId
+        in: query
+        name: id
+        type: string
+      - description: ContractorId
+        in: query
+        name: contractor_id
+        type: string
+      - description: DeliveryTime
+        in: query
+        name: delivery_time
+        type: string
+      - description: Price
+        in: query
+        name: price
+        type: string
+      - description: SortType
+        in: query
+        name: sort_type
+        type: string
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.GetAllBidRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Get all Bids
+      tags:
+      - bid
+  /client/tenders/{id}/bids:
+    get:
+      consumes:
+      - application/json
+      description: Get Bid by their ID
+      parameters:
+      - description: Bid ID
+        in: query
+        name: id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.BidRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Get Bid by ID
+      tags:
+      - bid
+    post:
+      consumes:
+      - application/json
+      description: Create a new bid with the provided details
+      parameters:
+      - description: Bid Details
+        in: body
+        name: bid
+        required: true
+        schema:
+          $ref: '#/definitions/models.ApiCreateBidReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Create a new bid
+      tags:
+      - bid
   /img-upload:
     post:
       consumes:
@@ -442,127 +593,6 @@ paths:
       summary: Register
       tags:
       - auth
-  /tenders/{id}/award/{bid_id}:
-    put:
-      consumes:
-      - application/json
-      description: Update an Bid's details
-      parameters:
-      - description: Bid ID
-        in: query
-        name: bid_id
-        type: string
-      - description: Bid Update Details
-        in: body
-        name: bid
-        required: true
-        schema:
-          $ref: '#/definitions/models.ApiUpdateBidReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      security:
-      - BearerAuth: []
-      summary: Update an Bid
-      tags:
-      - bid
-  /tenders/{id}/bids:
-    get:
-      consumes:
-      - application/json
-      description: Get all Bids with optional filtering
-      parameters:
-      - description: TenderId
-        in: query
-        name: id
-        type: string
-      - description: ContractorId
-        in: query
-        name: contractor_id
-        type: string
-      - description: DeliveryTime
-        in: query
-        name: delivery_time
-        type: string
-      - description: Price
-        in: query
-        name: price
-        type: string
-      - description: SortType
-        in: query
-        name: sort_type
-        type: string
-      - description: Limit
-        in: query
-        name: limit
-        type: integer
-      - description: Offset
-        in: query
-        name: offset
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.GetAllBidRes'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      security:
-      - BearerAuth: []
-      summary: Get all Bids
-      tags:
-      - bid
-    post:
-      consumes:
-      - application/json
-      description: Create a new bid with the provided details
-      parameters:
-      - description: Bid Details
-        in: body
-        name: bid
-        required: true
-        schema:
-          $ref: '#/definitions/models.ApiCreateBidReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      security:
-      - BearerAuth: []
-      summary: Create a new bid
-      tags:
-      - bid
 securityDefinitions:
   BearerAuth:
     in: header
